--- a/source/_posts/22092625.md
+++ b/source/_posts/22092625.md
@@ -152,7 +152,7 @@ watch:{
 ## computed和watch的区别
 ### computed特性
 1. 是计算值
-2. 应用：就是简化tempalte里面 {{}} 计算和处理props或$emit的传值
+2. 应用：就是简化tempalte里面 `{{}}` 计算和处理props或$emit的传值
 3. 具有缓存性，页面重新渲染值不变化,计算属性会立即返回之前的计算结果，而不必再次执行函数
 
 ### watch特性
