--- a/source/_posts/22092704.md
+++ b/source/_posts/22092704.md
@@ -221,7 +221,7 @@ mvvm.a.b = 'ok';
 console.log(mvvm.a.b);  // 'ok'
 ```
 
-写到这里数据劫持和数据代理都实现了，那么接下来就需要编译一下了，把 {{ }} 里面的内容解析出来
+写到这里数据劫持和数据代理都实现了，那么接下来就需要编译一下了，把 `{{ }}` 里面的内容解析出来
 
 ### 数据编译
 ```javascript
@@ -479,14 +479,14 @@ Watcher.prototype.update = function() {
 通过自己实现的mvvm一共包含了以下东西
 - 通过Object.defineProperty的get和set进行数据劫持
 - 通过遍历data数据进行数据代理到this上
-- 通过{{ }}对数据进行编译
+- 通过`{{ }}`对数据进行编译
 - 通过发布订阅模式实现数据与视图同步
 - 通过通过通过，收了，感谢大官人的留步了
 
 ## 补充
 针对以上代码在实现编译的时候还是会有一些小bug，再次经过研究和高人指点，完善了编译，下面请看修改后的代码
 
-修复：两个相邻的{{ }}正则匹配，后一个不能正确编译成对应的文本，如{{album.name}} {{singer}}
+修复：两个相邻的`{{ }}`正则匹配，后一个不能正确编译成对应的文本，如`{{album.name}} {{singer}}`
 ```javascript
 function Compile(el, vm) {
     // 省略...
